assets/css/main.css
/* ... */
body::-webkit-scrollbar {
  width: 5px;
}

body::-webkit-scrollbar-track {
  background-color: #cae6f7;
  border-radius: 5px;
}

body::-webkit-scrollbar-button,
body::-webkit-scrollbar-thumb {
  background-color: var(--primary-color);
  border-radius: 5px;
}

.body-active {
  height: 100vh;
  overflow: clip;
}

.goog-te-gadget .goog-te-combo {
  padding: 10px !important;
  color: #000 !important;
}

.cart-logo {
  width: 20px;
}




.my-app {
  position: relative;
  min-width: 100vw;
  min-height: 100vh;
  max-width: 100vw;
  max-height: 100vh;
  overflow-x: clip;
}

button {
  background-color: transparent;
  border: 0px;
  outline: 0px;
}

a,
button {
  text-decoration: none;
  display: inline-flex;
  align-items: center;
  gap: 8px;
  outline: 0px;
  border: 0px;
  transition: var(--transition);
  cursor: po;
}

.instructor-row .col-lg-3 {
  width: 20%;
}

.overview .overview__single {
  cursor: pointer;
}

a i,
button i {
  font-size: inherit;
  line-height: inherit;
  color: inherit;
}

a:hover,
button:hover {
  text-decoration: none;
  border: 0px;
  outline: 0px;
}

a:focus,
button:focus {
  box-shadow: none;
  outline: 0px;
}

.navbar__logo img {
  max-width: 90px;
}

ul,
ol {
  list-style-type: none;
  list-style-position: inside;
  margin: 0px;
  padding: 0px;
}

hr,
blockquote,
textarea {
  margin: 0px;
  opacity: 1;
}

input,
textarea {
  border: 0px;
  outline: 0px;
}

input:focus,
textarea:focus {
  box-shadow: none;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0px;
}

input[type=number] {
  -moz-appearance: textfield;
  appearance: textfield;
}

input[type=checkbox] {
  width: initial;
  height: initial;
}

textarea {
  min-height: 150px;
  resize: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0px;
}

iframe {
  border: 0px;
  width: 100%;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  font-family: var(--);
  padding: 0px;
  margin: 0px;
  color: var(--white);
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--work);
  font-weight: 700;
}

/* ==== 
     --------- (2.01) reset styles end ---------
     ==== */
/* ==== 
 --------- (2.02) typography styles start ---------
 ==== */
p,
th,
td,
li,
input,
textarea,
select,
label,
blockquote,
span {
  font-size: 20px;
  line-height: 30px;
  font-weight: 400;
  color: #dddddd;
}

.primary-text {
  font-size: 24px;
  line-height: 34px;
}

.tertiary-text {
  font-size: 16px;
  line-height: 24px;
}

.craft .section__content p strong {
  font-size: 22px;
}

.mt5 {
  margin-top: 7px !important;
}

a,
button {
  font-size: 18px;
  line-height: 24px;
  color: var(--theme-color);
  font-weight: 500;
  cursor: po;
  display: inline-flex;
  gap: 8px;
}

a:hover,
button:hover {
  color: var(--primary-color);
}

h1 {
  font-size: 64px;
  line-height: 72px;
}

.light-title {
  font-size: 40px;
  line-height: 50px;
  font-weight: 700;
  font-family: var(--work);
}

.light-title-sm {
  font-size: 56px;
  line-height: 66px;
}

.light-title-xs {
  font-size: 48px;
  line-height: 58px;
}

h2 {
  font-size: 42px;
  line-height: 46px;
}

h3 {
  font-size: 32px;
  line-height: 42px;
}

h4 {
  font-size: 24px;
  line-height: 34px;
}

h5 {
  font-size: 18px;
  line-height: 28px;
}

h6 {
  font-size: 16px;
  line-height: 24px;
}

.l-t {
  font-size: 140px;
  line-height: 150px;
  color: #c0bfc5;
  font-weight: 800;
  text-align: center;
  margin-top: -25px;
}

h1 a,
h1 span,
h2 a,
h2 span,
h3 a,
h3 span,
h4 a,
h4 span,
h5 a,
h5 span,
h6 a,
h6 span,
p a,
p span {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  font-weight: inherit;
  color: inherit;
}

.br-01 {
  position: relative;
  padding-left: 50px;
}

.mb-50px {
  margin-bottom: 60px;
}

.pr-70px {
  padding-right: 20px;
}

.br-img {
  background: url(../images/new/heading.png) center / contain no-repeat;
  padding-bottom: 70px;
  margin-bottom: 30px;
}

.br-img2 {
  margin-bottom: 0;
  padding-bottom: 50px;
}

.title-animation>div>div:first-child {
  text-transform: uppercase;
}

.title-animation>span>div>div:first-child {
  text-transform: uppercase !important;
}

.title-animation>span * {
  background-clip: inherit;
  -webkit-text-fill-color: inherit;
  background: inherit;
}

/* ==== 
 --------- (2.02) typography styles end ---------
 ==== */
/* ==== 
 --------- (2.03) global styles start ---------
 ==== */
img {
  max-width: 100%;
  height: auto;
  border: 0px;
  outline: 0px;
  object-fit: cover;
}

i {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

span {
  display: inline-block;
}

.cursor-outer {
  margin-left: -12px;
  margin-top: -12px;
  width: 30px;
  height: 30px;
  border: 1px solid var(--primary-color);
  box-sizing: border-box;
  z-index: 10000000;
  opacity: 0.5;
  transition: all 0.14s ease-out;
  mix-blend-mode: difference;
}

.cursor-outer.cursor-hover {
  opacity: 0;
  transition: none;
}

.cursor-outer.cursor-big {
  opacity: 0;
}

.mouseCursor {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  po-events: none;
  border-radius: 50%;
  transform: translateZ(0);
  visibility: hidden;
  text-align: center;
}

.mouseCursor.cursor-big {
  width: 20px;
  height: 20px;
  margin-left: -12px;
  margin-top: -12px;
}

.cursor-inner {
  margin-left: -3px;
  margin-top: -3px;
  width: 10px;
  height: 10px;
  z-index: 10000001;
  background-color: var(--primary-color);
  opacity: 0.8;
  transition: width 0.3s ease-in-out, height 0.3s ease-in-out, margin 0.3s ease-in-out, opacity 0.3s ease-in-out;
  mix-blend-mode: difference;
}

.cursor-inner span {
  color: var(--theme-color);
  line-height: 60px;
  opacity: 0;
  text-transform: uppercase;
  letter-spacing: 1px;
  font-size: 12px;
}

.cursor-inner.cursor-big span {
  opacity: 1;
}

.cursor-inner.cursor-hover {
  margin-left: -10px;
  margin-top: -10px;
  width: 30px;
  height: 30px;
  background-color: transparent;
  border: 1px solid #686363;
  opacity: 0;
}

.unset {
  max-width: unset;
}
/* ... */

